...
                  child: InkWell(
                    onTap: () {
                      Navigator.pushReplacement(
                          context,
                          MaterialPageRoute(
                              builder: (context) => HomePageView(
                                    selectedVal: 'food',
                                  )));
                    },
                    child: SizedBox(
                      height: deviceHeight * 0.15,
                      width: deviceWidth * 0.85,
                      child: const Card(
...
                  child: InkWell(
                    onTap: () {
                      Navigator.pushReplacement(
                          context,
                          MaterialPageRoute(
                              builder: (context) => HomePageView(
                                    selectedVal: 'drink',
                                  )));
                    },
                    child: Container(
                      height: deviceHeight * 0.15,
                      width: deviceWidth * 0.85,
                      child: const Card(
...
